[package]
name = "ethereum-interfaces"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2021"
license = "Apache-2.0"

[features]
sentry = []
sentinel = []
remotekv = []
snapshotsync = []
txpool = []
web3 = []

[dependencies]
arrayref = "0.3"
ethereum-types = { version = "0.14", default-features = false }
ethnum = { version = "1", default-features = false }
prost = "0.12.3"
tonic = "0.10.2"

[build-dependencies]
protobuf-src = "1.1.0"
prost-build = "0.12.3"
tonic-build = "0.10.2"
